# pulumi-azure-linux-vm

./: Pulumi.playground.yaml  Pulumi.yaml  README.md  __main__.py  network.py  nsg.py  public_ip.py  pyproject.toml  requirements.txt  vm.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
resources/: vm.py
