[tool.poetry]
name = "pulumi-azure-linux-vm"
version = "0.1.0"
description = ""
authors = ["Wellington Ozorio <wozorio@duck.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pulumi-azure-native = "^3.8.0"
pulumi = "^3.203.0"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
